[tool.poetry]
name = "image-generator-torch"
version = "0.1.0"
description = ""
authors = ["Oskar Kuliński <oskarkulinski3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
matplotlib = "^3.10.0"
torcheval = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
